--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Global Pathways - Your Path to US College Success</title>
     <meta name="description" content="Empowering international and underprivileged students with comprehensive college admissions guidance, FAFSA help, and financial aid resources for US universities." />
     <meta name="author" content="Global Pathways" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/jpeg" href="/images/logo.jpeg" />
 
     <meta property="og:title" content="Global Pathways - Your Path to US College Success" />
     <meta property="og:description" content="Comprehensive college admissions guidance for international and underprivileged students seeking US university admission." />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Global Pathways - Your Path to US College Success" />
+    <meta name="twitter:title" content="Global Pathways - Your Path to College Success" />
     <meta name="twitter:description" content="Comprehensive college admissions guidance for international and underprivileged students." />
   </head>
 
